--- a/public/js/application/package.json
+++ b/public/js/application/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.4.1",
     "cross-env": "^5.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
     "laravel-mix": "^1.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
